# modern-python-boilerplate

./: Dockerfile  Dockerfile-chroot  Dockerfile-dev  Dockerfile-final  Dockerfile-og  pyproject.toml
src/api_module/: main.py
src/as_api/: main.py
tests/: test_main.py
